<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/login_logo_description"
                    android:src="@drawable/img_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/login_frame"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <EditText
                    android:id="@+id/edId"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="아이디를 입력해주세요"
                    android:background="@drawable/rectangle_box_black"
                    android:ems="15"
                    android:hint="@string/login_id_hint"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/edPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="비밀번호를 입력해주세요"
                    android:background="@drawable/rectangle_box_black"
                    android:ems="15"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="#FFDF00"
                    android:elevation="3dp"
                    android:ems="19"
                    android:text="@string/login_button" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/tool_button_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="40dp"
                android:paddingTop="80dp"
                android:paddingEnd="40dp"
                android:paddingBottom="80dp">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/register_border2"
                    android:backgroundTint="@color/Yellow"
                    android:elevation="3dp"
                    android:ems="19"
                    android:text="@string/login_register_button"
                    android:textColor="#455A64" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFindIdPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/register_border2"
                    android:elevation="3dp"
                    android:ems="19"
                    android:text="@string/login_find_id_password_button"
                    android:textColor="#37474F" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>